Terminado los enlaces de las pelis/series a pagina 404

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Buscar película o serie"
-                        aria-label="Search"  pattern=".{0,20}"  maxlength="20">
+                        aria-label="Search" pattern=".{0,20}" maxlength="20">
                     <button class="btn btn-outline-light" type="submit"><i
                             class="fa-solid fa-magnifying-glass"></i></button>
                 </form>
@@ -90,8 +90,9 @@
                                 <p class="carousel_desc">Esta comedia dramatica sigue a Eliseo, el encargado entrometido
                                     y manipulador de un edificio.</p>
                                 <div class="botones d-flex ">
-                                    <button class="carousel_boton btn btn-light btn-lg m-1 ">VER AHORA</button>
-                                    <button class="carousel_boton btn btn-dark btn-lg m-1">DETALLES</button>
+                                    <a href="error404.html" class="carousel_boton btn btn-light btn-lg m-1 ">VER
+                                        AHORA</a>
+                                    <a href="error404.html" class="carousel_boton btn btn-dark btn-lg m-1">DETALLES</a>
                                 </div>
                             </div>
                         </div>
@@ -109,8 +110,10 @@
                                 <p class="">PELICULA <b>HD</b> · 2018 · 2h 2min ·Ciencia ficción, Comedia </p>
                                 <p class="carousel_desc">La secuela de la primera parte.</p>
                                 <div class="botones d-flex ">
-                                    <button class="carousel_boton btn btn-light btn-lg m-1 ">VER AHORA</button>
-                                    <button class="carousel_boton btn btn-dark btn-lg m-1">DETALLES</button>
+                                    <a href="error404.html" class="carousel_boton btn btn-light btn-lg m-1 ">VER
+                                        AHORA</a>
+                                    <a href="detallePelicula.html"
+                                        class="carousel_boton btn btn-dark btn-lg m-1">DETALLES</a>
                                 </div>
                             </div>
                         </div>
@@ -128,8 +131,10 @@
                                 <p class="carousel_desc">Tras robar el Teseracto en "Avengers: Endgame", Loki cae ante
                                     la Autoridad de Variación temporal.</p>
                                 <div class="botones d-flex ">
-                                    <a href="" class="carousel_boton btn btn-light btn-lg m-1 ">VER AHORA</a>
-                                    <a href="/detalleSerie-episodios.html" class="carousel_boton btn btn-dark btn-lg m-1">DETALLES</a>
+                                    <a href="error404.html" class="carousel_boton btn btn-light btn-lg m-1 ">VER
+                                        AHORA</a>
+                                    <a href="/detalleSerie-episodios.html"
+                                        class="carousel_boton btn btn-dark btn-lg m-1">DETALLES</a>
                                 </div>
                             </div>
                         </div>
@@ -148,8 +153,9 @@
                                 <p class="carousel_desc">Logan y el Profesor X conocen a una joven mutante que es
                                     perseguida.</p>
                                 <div class="botones d-flex ">
-                                    <button class="carousel_boton btn btn-light btn-lg m-1 ">VER AHORA</button>
-                                    <button class="carousel_boton btn btn-dark btn-lg m-1">DETALLES</button>
+                                    <a href="error404.html" class="carousel_boton btn btn-light btn-lg m-1 ">VER
+                                        AHORA</a>
+                                    <a href="error404.html" class="carousel_boton btn btn-dark btn-lg m-1">DETALLES</a>
                                 </div>
                             </div>
                         </div>
@@ -176,40 +182,40 @@
         </div>
         <section class="container_flex container mb-5">
             <div class="div_animations">
-                <a href="#"><img src="/img/peliculas-series/pelis-principales/cars-2.webp" height="250" width="350"
-                        alt="movie-poster" class="img-box"></a>
-            </div>
-            <div class="div_animations">
-                <a href="#"><img src="/img/peliculas-series/pelis-principales/deadpool.webp" height="250" width="350"
-                        alt="movie-poster" class="img-box"></a>
-            </div>
-            <div class="div_animations">
-                <a href="#"><img src="/img/peliculas-series/pelis-principales/intensamente.webp" height="250"
+                <a href="error404.html"><img src="/img/peliculas-series/pelis-principales/cars-2.webp" height="250"
                         width="350" alt="movie-poster" class="img-box"></a>
             </div>
             <div class="div_animations">
-                <a href="#"><img src="/img/peliculas-series/pelis-principales/logan.webp" height="250" width="350"
-                        alt="movie-poster" class="img-box"></a>
-            </div>
-            <div class="div_animations">
-                <a href="#"><img src="/img/peliculas-series/pelis-principales/planeta de los simios.webp" height="250"
+                <a href="error404.html"><img src="/img/peliculas-series/pelis-principales/deadpool.webp" height="250"
                         width="350" alt="movie-poster" class="img-box"></a>
             </div>
             <div class="div_animations">
-                <a href="#"><img src="/img/peliculas-series/pelis-principales/cars-3.webp" height="250" width="350"
-                        alt="movie-poster" class="img-box"></a>
+                <a href="error404.html"><img src="/img/peliculas-series/pelis-principales/intensamente.webp"
+                        height="250" width="350" alt="movie-poster" class="img-box"></a>
             </div>
             <div class="div_animations">
-                <a href="#"><img src="/img/peliculas-series/pelis-principales/deadpool-2.webp" alt="movie-poster"
-                        height="250" width="350" class="img-box"></a>
-            </div>
-            <div class="div_animations">
-                <a href="#"><img src="/img/peliculas-series/pelis-principales/cars.webp" height="250" width="350"
-                        alt="movie-poster" class="img-box"></a>
-            </div>
-            <div class="div_animations">
-                <a href="#"><img src="/img/peliculas-series/pelis-principales/transformers.webp" height="250"
+                <a href="error404.html"><img src="/img/peliculas-series/pelis-principales/logan.webp" height="250"
                         width="350" alt="movie-poster" class="img-box"></a>
+            </div>
+            <div class="div_animations">
+                <a href="error404.html"><img src="/img/peliculas-series/pelis-principales/planeta de los simios.webp"
+                        height="250" width="350" alt="movie-poster" class="img-box"></a>
+            </div>
+            <div class="div_animations">
+                <a href="error404.html"><img src="/img/peliculas-series/pelis-principales/cars-3.webp" height="250"
+                        width="350" alt="movie-poster" class="img-box"></a>
+            </div>
+            <div class="div_animations">
+                <a href="detallePelicula.html"><img src="/img/peliculas-series/pelis-principales/deadpool-2.webp"
+                        alt="movie-poster" height="250" width="350" class="img-box"></a>
+            </div>
+            <div class="div_animations">
+                <a href="error404.html"><img src="/img/peliculas-series/pelis-principales/cars.webp" height="250"
+                        width="350" alt="movie-poster" class="img-box"></a>
+            </div>
+            <div class="div_animations">
+                <a href="error404.html"><img src="/img/peliculas-series/pelis-principales/transformers.webp"
+                        height="250" width="350" alt="movie-poster" class="img-box"></a>
             </div>
 
         </section>
@@ -249,36 +255,36 @@
             </div>
             <section class="container_flex container mb-5">
                 <div class="div_animations">
-                    <a href="#"><img src="/img/peliculas-series/series-principales/el encargado.webp" height="250"
+                    <a href="error404.html"><img src="/img/peliculas-series/series-principales/el encargado.webp"
+                            height="250" width="350" alt="movie-poster" class="img-box"></a>
+                </div>
+                <div class="div_animations">
+                    <a href="error404.html"><img src="/img/peliculas-series/series-principales/daredevil.webp"
+                            height="250" width="350" alt="movie-poster" class="img-box"></a>
+                </div>
+                <div class="div_animations">
+                    <a href="error404.html"><img src="/img/peliculas-series/series-principales/falcon.webp" height="250"
                             width="350" alt="movie-poster" class="img-box"></a>
                 </div>
                 <div class="div_animations">
-                    <a href="#"><img src="/img/peliculas-series/series-principales/daredevil.webp" height="250"
-                            width="350" alt="movie-poster" class="img-box"></a>
+                    <a href="error404.html"><img src="/img/peliculas-series/series-principales/impuros.webp"
+                            height="250" width="350" alt="movie-poster" class="img-box"></a>
                 </div>
                 <div class="div_animations">
-                    <a href="#"><img src="/img/peliculas-series/series-principales/falcon.webp" height="250" width="350"
-                            alt="movie-poster" class="img-box"></a>
+                    <a href="error404.html"><img src="/img/peliculas-series/series-principales/la voz ausente.webp"
+                            height="250" width="350" alt="movie-poster" class="img-box"></a>
                 </div>
                 <div class="div_animations">
-                    <a href="#"><img src="/img/peliculas-series/series-principales/impuros.webp" height="250"
-                            width="350" alt="movie-poster" class="img-box"></a>
+                    <a href="/detalleSerie-episodios.html"><img src="/img/peliculas-series/series-principales/loki.webp"
+                            height="250" width="350" alt="movie-poster" class="img-box"></a>
                 </div>
                 <div class="div_animations">
-                    <a href="#"><img src="/img/peliculas-series/series-principales/la voz ausente.webp" height="250"
-                            width="350" alt="movie-poster" class="img-box"></a>
+                    <a href="error404.html"><img src="/img/peliculas-series/series-principales/swat.webp"
+                            alt="movie-poster" height="250" width="350" class="img-box"></a>
                 </div>
                 <div class="div_animations">
-                    <a href="/detalleSerie-episodios.html"><img src="/img/peliculas-series/series-principales/loki.webp" height="250" width="350"
-                            alt="movie-poster" class="img-box"></a>
-                </div>
-                <div class="div_animations">
-                    <a href="#"><img src="/img/peliculas-series/series-principales/swat.webp" alt="movie-poster"
-                            height="250" width="350" class="img-box"></a>
-                </div>
-                <div class="div_animations">
-                    <a href="#"><img src="/img/peliculas-series/series-principales/the-old-man.webp" height="250"
-                            width="350" alt="movie-poster" class="img-box"></a>
+                    <a href="error404.html"><img src="/img/peliculas-series/series-principales/the-old-man.webp"
+                            height="250" width="350" alt="movie-poster" class="img-box"></a>
                 </div>
             </section>
 
