--- a/peliculas.html
+++ b/peliculas.html
@@ -47,7 +47,7 @@
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Buscar película o serie"
-                        aria-label="Search"  pattern=".{0,20}"  maxlength="20">
+                        aria-label="Search" pattern=".{0,20}" maxlength="20">
                     <button class="btn btn-outline-light" type="submit"><i
                             class="fa-solid fa-magnifying-glass"></i></button>
                 </form>
@@ -59,7 +59,7 @@
             </ul>
         </div>
     </nav>
-    
+
     <!-- CATALOGO -->
     <div class="container">
         <div class="row">
@@ -72,19 +72,23 @@
         <div class="row justify-content-center ">
             <div class="col-lg-5 col-md-6 mb-4">
                 <div class="card">
-                    <img src="img/peliculas-series/pelis-accion/-de-matar.webp" alt="">
+                    <img src="img/peliculas-series/pelis-principales/deadpool-2.webp" alt="">
                     <div class="card_body  dark  d-flex flex-column">
-                        <h2 class="card_title">Duro de Matar</h2>
-                        <p class="card_info">Un grupo terrorista se apodera de un edificio de Los Ángeles y toma a
-                            un
-                            grupo de
-                            personas como rehenes. El policía de Nueva York John McClane consigue escapar del acoso
-                            terrorista.
-                            Aunque está solo y fuera de servicio, McClane decide enfrentarse a los secuestradores y
-                            se
-                            convierte
-                            en la única esperanza para los rehenes.</p>
-                        <a class="card_btn btn">Ver Ahora</a>
+                        <h2 class="card_title">DeadPool 2</h2>
+                        <p class="card_info">Tras sobrevivir a un ataque bovino casi mortal, un distinguido chef de
+                            cafeteria (Wade Wilson)
+                            lucha por su sueño de convertirse en el camarero más sensual de Miami, al tiempo que aprende
+                            a
+                            lidiar con la pérdida de su sentido del gusto. Buscando recuperar eso que vuelve emocionante
+                            su
+                            vida, además de un condensador de flujo, Wade debe luchar contra ninjas, la yakuza y una
+                            manada
+                            caninos sexualmente agresivos, mientras viaja por el mundo para descubrir la importancia de
+                            la
+                            familia, la amistad y el sabor - encontrado de un nuevo gusto por la aventura y ganando el
+                            codiciado
+                            título de taza de café de "Mejor amante del mundo"</p>
+                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
                     </div>
                 </div>
             </div>
@@ -97,7 +101,7 @@
                             codo junto a la Avispa. La misión revelará a los dos superhéroes un secreto terrible y los
                             enfrentará a su enemigo más poderoso.
                         </p>
-                        <a class="card_btn btn">Ver Ahora</a>
+                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
                     </div>
                 </div>
             </div>
@@ -113,7 +117,7 @@
                             un planeta donde los Na'vi viven y el ambiente es peligroso para los humanos. Durante su
                             misión, se enamora de una mujer Na'vi.
                         </p>
-                        <a class="card_btn btn">Ver Ahora</a>
+                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
                     </div>
                 </div>
             </div>
@@ -125,7 +129,7 @@
                         <p class="card_info">Steve Rogers quiere ser soldado, pero siempre es rechazado. Finalmente,
                             participa en un experimento que lo convierte en el Capitán América y recibe su primera
                             misión.</p>
-                        <a class="card_btn btn">Ver Ahora</a>
+                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
                     </div>
                 </div>
             </div>
@@ -140,7 +144,7 @@
                         <p class="card_info">Una flota de naves espaciales ataca la Tierra el 4 de julio, destruyendo
                             grandes ciudades. Un grupo de supervivientes planea un contraataque para salvar el planeta
                             antes de que sea demasiado tarde. </p>
-                        <a class="card_btn btn">Ver Ahora</a>
+                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
                     </div>
                 </div>
             </div>
@@ -152,7 +156,7 @@
                         <p class="card_info">Dom Toretto y sus familias se enfrentan al peor enemigo imaginable, uno
                             llegado desde el pasado con sed de venganza, dispuesto a cualquier cosa con tal de destruir
                             todo aquello que Dom ama.</p>
-                        <a class="card_btn btn">Ver Ahora</a>
+                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
                     </div>
                 </div>
             </div>
