--- a/peliculas2.html
+++ b/peliculas2.html
@@ -47,7 +47,7 @@
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Buscar película o serie"
-                        aria-label="Search"  pattern=".{0,20}"  maxlength="20">
+                        aria-label="Search" pattern=".{0,20}" maxlength="20">
                     <button class="btn btn-outline-light" type="submit"><i
                             class="fa-solid fa-magnifying-glass"></i></button>
                 </form>
@@ -78,7 +78,7 @@
                         <p class="card_info">Un abogado se convierte en el objetivo de un político corrupto y de sus
                             matones de la Agencia de Seguridad tras recibir por accidente las pruebas un crimen
                             político.</p>
-                        <a class="card_btn btn">Ver Ahora</a>
+                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
                     </div>
                 </div>
             </div>
@@ -91,7 +91,7 @@
                             viejo. Sin embargo, hay alguien que no está dispuesto a permitírselo porque tiene la misión
                             de matarlo: un clon suyo más joven, más rápido y más fuerte.
                         </p>
-                        <a class="card_btn btn">Ver Ahora</a>
+                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
                     </div>
                 </div>
             </div>
@@ -107,7 +107,7 @@
                             misteriosamente a Marte. Allí deberá tomar parte en el conflicto de sus pobladores al
                             descubrir que la supervivencia de sus habitantes está en sus manos.
                         </p>
-                        <button class="card_btn">Ver Ahora</button>
+                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
                     </div>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                         <h2 class="card_title">Los 4 Fantasticos</h2>
                         <p class="card_info">Durante un viaje espacial, cuatro astronautas se exponen a una extraña
                             tormenta que altera su ADN y les dota de asombrosos superpoderes.</p>
-                        <button class="card_btn">Ver Ahora</button>
+                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
                     </div>
                 </div>
             </div>
@@ -133,7 +133,7 @@
                         <p class="card_info">El expolicía Brian O'Conner y su amigo Roman Pearce vuelven al mundo de las
                             carreras para transportar dinero sucio del criminal Carter Verone en Miami, mientras
                             colaboran con la agente encubierta Mónica Clemente para derribar su imperio. </p>
-                        <button class="card_btn">Ver Ahora</button>
+                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
                     </div>
                 </div>
             </div>
@@ -144,7 +144,7 @@
                         <h2 class="card_title">Cuidado bebe suelto</h2>
                         <p class="card_info">Unos granujas secuestran al hijo de una adinerada familia de Chicago pero
                             el bebé se escapa y se embarca en una serie de aventuras por la ciudad.</p>
-                        <button class="card_btn">Ver Ahora</button>
+                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
                     </div>
                 </div>
             </div>
