--- a/series.html
+++ b/series.html
@@ -47,7 +47,7 @@
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Buscar película o serie"
-                        aria-label="Search"  pattern=".{0,20}"  maxlength="20">
+                        aria-label="Search" pattern=".{0,20}" maxlength="20">
                     <button class="btn btn-outline-light" type="submit"><i
                             class="fa-solid fa-magnifying-glass"></i></button>
                 </form>
@@ -78,7 +78,7 @@
                         <p class="card_info">Peggy Carter parte en una misión en solitario para adquirir el misterioso
                             Zodiac mientras se enfrenta al sexismo después de la Segunda Guerra Mundial en la SSR, un
                             precursor de S.H.I.E.L.D.</p>
-                        <a class="card_btn btn">Ver Ahora</a>
+                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
                     </div>
                 </div>
             </div>
@@ -91,7 +91,7 @@
                             amenaza emergente que se cierne sobre una galaxia vulnerable, ambientada después de la caída
                             del Imperio y protagonizada por la actriz Rosario Dawson.
                         </p>
-                        <a class="card_btn btn">Ver Ahora</a>
+                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
                     </div>
                 </div>
             </div>
@@ -106,7 +106,7 @@
                         <p class="card_info"> La serie muestra la transformación de Andor, un ladrón que se convierte en
                             revolucionario y finalmente se une a la Rebelión contra el Imperio Galáctico.
                         </p>
-                        <a class="card_btn btn">Ver Ahora</a>
+                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
                     </div>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                         <p class="card_info">La serie sigue a la Fuerza Clon 99, un escuadrón único de soldados clon con
                             mutaciones genéticas que resisten la Orden 66 y huyen en los primeros días del Imperio
                             Galáctico. A ellos se une Omega, una joven clon femenino.</p>
-                        <a class="card_btn btn">Ver Ahora</a>
+                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
                     </div>
                 </div>
             </div>
@@ -135,7 +135,7 @@
                             ningún héroe puede manejar solo. Esta alianza épica lucha contra villanos intergalácticos y
                             fuerzas del mal para salvar al mundo, mostrando trabajo en equipo, valentía y sacrificio.
                         </p>
-                        <a class="card_btn btn">Ver Ahora</a>
+                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
                     </div>
                 </div>
             </div>
@@ -148,7 +148,7 @@
                             guardaespaldas se ve reclutado para proteger al director ejecutivo de una controvertida
                             empresa de carne cultivada en laboratorio, quien también es un sobreviviente del fatídico
                             ataque que cambió su vida.</p>
-                        <a class="card_btn btn">Ver Ahora</a>
+                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
                     </div>
                 </div>
             </div>
