--- a/series2.html
+++ b/series2.html
@@ -47,7 +47,7 @@
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Buscar película o serie"
-                        aria-label="Search"  pattern=".{0,20}"  maxlength="20">
+                        aria-label="Search" pattern=".{0,20}" maxlength="20">
                     <button class="btn btn-outline-light" type="submit"><i
                             class="fa-solid fa-magnifying-glass"></i></button>
                 </form>
@@ -79,7 +79,7 @@
                             Conozca de cerca algunos de los barcos y vehículos más emblemáticos y queridos de las
                             películas de Star Wars mientras esta encantadora serie lo lleva a recorridos aéreos por la
                             Galaxia Lejana, Muy Lejana.</p>
-                        <a class="card_btn btn">Ver Ahora</a>
+                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
                     </div>
                 </div>
             </div>
@@ -92,7 +92,7 @@
                             aviación en una isla del Pacífico aparentemente desierta, una isla en la que suceden cosas
                             muy extrañas. Luchando por la supervivencia, casi medio centenar de personas mostrarán lo
                             mejor y lo peor de sí mismas.</p>
-                        <a class="card_btn btn">Ver Ahora</a>
+                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
                     </div>
                 </div>
             </div>
@@ -108,7 +108,7 @@
                             secuestrado por una banda de recolectores de órganos que están decididos a quitarle los
                             ojos.
                         </p>
-                        <a class="card_btn btn">Ver Ahora</a>
+                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
                     </div>
                 </div>
             </div>
@@ -120,7 +120,7 @@
                         <p class="card_info">El agente Mulder y su escéptica compañera Scully deben encargarse de un
                             atentado en un edificio federal en Dallas; Mulder sospecha que la bomba ha sido colocada por
                             el mismo gobierno estadounidense.</p>
-                        <a class="card_btn btn">Ver Ahora</a>
+                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
                     </div>
                 </div>
             </div>
@@ -136,7 +136,7 @@
                             tras la muerte de un amigo en común y se enfrentan a los inmensos cambios que está
                             experimentando el sistema de justicia estadounidense gracias a la inteligencia artificial.
                         </p>
-                        <a class="card_btn btn">Ver Ahora</a>
+                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
                     </div>
                 </div>
             </div>
@@ -150,7 +150,7 @@
                             Zoe, deben adaptarse a esta tierra misteriosa. Un secreto sobre Zoe pone en riesgo su lugar
                             en la colonia, mientras el líder Nathaniel Taylor les advierte que no todo es tan idílico
                             como parece.</p>
-                        <a class="card_btn btn">Ver Ahora</a>
+                        <a class="card_btn btn" href="error404.html">Ver Ahora</a>
                     </div>
                 </div>
             </div>
