modificacion de portfolios

--- a/acercade.html
+++ b/acercade.html
@@ -103,7 +103,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 img-container-acerca">
-                    <a href="https://portfolio-sebas-garcia.netlify.app/" target="_blank" class="subtitle-acerca">
+                    <a href="https://portfoliosebasgarcia.netlify.app/" target="_blank" class="subtitle-acerca">
                         <img src="/img/Integrantes/Garcia-Seba.jpeg" class="img-responsive-acerca img-fluid" alt="">
                         <div>Sebastian Garcia</div>
                     </a>
@@ -121,7 +121,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 img-container-acerca">
-                    <a href="https://portfolio-sosa.netlify.app/" target="_blank" class="subtitle-acerca">
+                    <a href="https://mi-portfolio-sosa-martin.netlify.app/" target="_blank" class="subtitle-acerca">
                         <img src="/img/Integrantes/Sosa-Martin.jpeg" class="img-responsive-acerca img-fluid" alt="">
                         <div>Leandro Martín Sosa</div>
                     </a>
