--- a/detallePelicula.html
+++ b/detallePelicula.html
@@ -146,7 +146,7 @@
                     <a href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
                 </div>
                 <div class="col-lg-3">
-                    <a href="#">Contacto</a>
+                    <a href="/paginadecontacto.html">Contacto</a>
                 </div>
                 <div class="col-lg-3">
                     <a href="#">Acerca de nosotros</a>
