agrego estilos a los parrafos

--- a/acercade.html
+++ b/acercade.html
@@ -19,8 +19,6 @@
     <!-- FAVICON -->
     <link rel="shortcut icon" href="/img/peliculas-series/img-logo-favicon.png" type="image/x-icon">
 
-
-
 </head>
 
 <body>
@@ -76,22 +74,22 @@
         </div>
 
         <div class="container ">
-            <p class="text-white m-4 fs-6 parrafo-acerca">
+            <p class="text-white m-4 fs-6 parrafo-acerca big-first-letter">
                 Cinema Team3 fue creada por un grupo de cinco estudiantes de la academia RollingCode, de la Provincia de
                 Tucumán en el año 2024. Apasionados por la programación y la tecnología, nos hemos embarcado en este
                 emocionante proyecto de servicio de streaming para ofrecer una experiencia de entretenimiento digital.
-            <p class="text-white m-4 fs-6 parrafo-acerca">
-                Nuestra misión con Cinema Team3 es brindar una plataforma de streaming intuitiva, accesible y con el
+            <p class="text-white m-4 fs-6 parrafo-acerca big-first-letter">
+                Innovando siempre, nuestra misión con Cinema Team3 es brindar una plataforma de streaming intuitiva, accesible y con el
                 contenido actualizado, combinando lo mejor de la tecnología para todos los dispositivos actuales. Como
                 estudiantes, estamos constantemente aprendiendo y mejorando, lo que nos impulsa a implementar las
                 últimas tendencias y tecnologías para que disfrutes de un servicio ágil, confiable y adaptable a tus
                 gustos.</p>
-            <p class="text-white m-4 fs-6 parrafo-acerca">
+            <p class="text-white m-4 fs-6 parrafo-acerca big-first-letter">
                 Nos destacamos por nuestra capacidad de trabajo en equipo, pasión por los detalles y compromiso con la
                 calidad. Juntos, compartimos la ilusión de revolucionar la forma en que las personas disfrutan del
-                entretenimiento en línea. <br>
-                ¡Gracias por ser parte de esta aventura con nosotros!
-            </p>
+                entretenimiento en línea.</p>
+            <p class="text-white m-4 fs-6 parrafo-acerca big-first-letter">
+                Es por todo eso que te damos las gracias por ser parte de esta aventura con nosotros!!!</p>
         </div>
 
         <div class="container text-center mt-5">
@@ -131,8 +129,6 @@
                 </div>
             </div>
         </div>
-
-
 
 
         <!-- FOOTER -->
