Ajusto el footer y agrego el cambio  a todas las secciones

--- a/series2.html
+++ b/series2.html
@@ -183,18 +183,18 @@
     <footer>
         <div class="contenedor_footer container-fluid d-flex bg-dark flex-column">
             <div class="row justify-content-center align-items-center w-100 p-2">
-                <div class="col-lg-3">
+                <div class="col-12 col-md-6 col-lg-3 text-center">
                     <img src="/img/peliculas-series/img-logo.png" alt="" width="200px">
                 </div>
-                <div class="col-lg-3">
-                    <a href="#"><i class="fa-brands fa-whatsapp fa-xl"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram fa-xl"></i></a>
-                    <a href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
+                <div class="col-12 col-md-6 col-lg-3 text-center">
+                    <a class="icon_footer" href="#"><i class="fa-brands fa-instagram fa-xl"></i></a>
+                    <a class="icon_footer" href="#"><i class="fa-brands fa-whatsapp fa-xl"></i></a>
+                    <a class="icon_footer" href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-12 col-md-6 col-lg-3 text-center">
                     <a href="/paginadecontacto.html">Contacto</a>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-12 col-md-6 col-lg-3 text-center">
                     <a href="#">Acerca de nosotros</a>
                 </div>
             </div>
