--- a/acercade.html
+++ b/acercade.html
@@ -23,10 +23,10 @@
 
 <body>
 
-    <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+     <!-- Navbar -->
+     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/index.html"><img src="/img/peliculas-series/img-logo.png" alt="logo-pag"
+            <a class="navbar-brand" href="#"><img src="/img/peliculas-series/img-logo.png" alt="logo-pag"
                     width="200px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -39,26 +39,26 @@
                         <a class="nav-link" aria-current="page" href="/index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Películas</a>
+                        <a class="nav-link" href="peliculas.html">Películas</a>
                     </li>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Series</a>
+                        <a class="nav-link" href="series.html">Series</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Planes</a>
+                        <a class="nav-link" href="/suscripcion.html">Planes</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Buscar película o serie"
-                        aria-label="Search">
+                        aria-label="Search"  pattern=".{0,20}"  maxlength="20">
                     <button class="btn btn-outline-light" type="submit"><i
                             class="fa-solid fa-magnifying-glass"></i></button>
                 </form>
                 <br>
                 <ul class="navbar-nav">
                     <li class="nav-item ms-4 me-3">
-                        <a class="nav-link" href="#"><i class="fa-solid fa-user fa-xl"></i></a>
+                        <a class="nav-link" href="/login.html"><i class="fa-solid fa-user fa-xl"></i></a>
             </div>
             </ul>
         </div>
