modifique la posicion de perfiles de los integrantes

--- a/acercade.html
+++ b/acercade.html
@@ -93,7 +93,7 @@
         </div>
 
         <div class="container text-center mt-5">
-            <div class="row">
+            <div class="row justify-content-evenly">
                 <div class="col-lg-4 col-md-6 col-sm-12 img-container-acerca">
                     <a href="https://miportfoliolautaro.netlify.app/" target="_blank" class="subtitle-acerca">
                         <img src="/img/Integrantes/Borges-Lautaro.jpeg" class="img-responsive-acerca img-fluid" alt="">
@@ -123,9 +123,6 @@
                         <img src="/img/Integrantes/Sosa-Martin.jpeg" class="img-responsive-acerca img-fluid" alt="">
                         <div>Leandro Martín Sosa</div>
                     </a>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 img-container-acerca">
-                    <img src="/img/peliculas-series/img-logo.png" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
