--- a/peliculas2.html
+++ b/peliculas2.html
@@ -181,15 +181,15 @@
                     <img src="/img/peliculas-series/img-logo.png" alt="" width="200px">
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 text-center">
-                    <a class="icon_footer" href="#"><i class="fa-brands fa-instagram fa-xl"></i></a>
-                    <a class="icon_footer" href="#"><i class="fa-brands fa-whatsapp fa-xl"></i></a>
-                    <a class="icon_footer" href="#"><i class="fa-brands fa-twitter fa-xl"></i></a>
+                    <a class="icon_footer" href="error404.html"><i class="fa-brands fa-instagram fa-xl"></i></a>
+                    <a class="icon_footer" href="error404.html"><i class="fa-brands fa-whatsapp fa-xl"></i></a>
+                    <a class="icon_footer" href="error404.html"><i class="fa-brands fa-twitter fa-xl"></i></a>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 text-center">
                     <a href="/paginadecontacto.html">Contacto</a>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 text-center">
-                    <a href="#">Acerca de nosotros</a>
+                    <a href="/acercade.html">Acerca de nosotros</a>
                 </div>
             </div>
             <div class="row justify-content-center align-items-center w-100 p-2">
